# migrations-habr

./: LICENSE  README.md  pyproject.toml
src/: db.sqlite3  example.gv  example2.gv  example3.gv
src/apps/developers/: models.py
src/apps/developers/migrations/: 0001_initial.py  0002_developer_developers__title_0428ce_idx.py  0002_developer_inn.py  0003_merge_20240716_0544.py  0004_developer_rating.py  0004_developer_rating_squashed_0006_alter_developer_rating.py  0005_alter_developer_rating.py  0006_alter_developer_rating.py
src/apps/realty/: apps.py  models.py
src/apps/realty/migrations/: 0001_initial.py  0002_flat_developer.py
src/config/: settings.py
