[tool.poetry]
name = "idashop"
version = "0.1.0"
description = ""
authors = ["Максим Мельников <m.melnikov@idaproject.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-extensions = "^3.2.3"
django-migration-vis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
